# se-toolkit-lab-8

./: REPORT.md  create_health_check.py  docker-compose.yml  pyproject.toml
.qwen/: settings.json
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  observability.py  server.py
nanobot/: Dockerfile  entrypoint.py
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
